# CSCRecorder

./: CSCRecorder.py  README.md  pyproject.toml
CSC/templates/: CreatePackage.xml
csc_recorder/: APIHandler.py  CSCRecorder.py
csc_recorder/CSC/templates/: CreatePackage.xml
